praticas/6-k8s/1-Manifests/4-Service.yaml
apiVersion: v1
kind: Service
metadata:
    name: blue
    labels:
        app: blue
spec:
    type: ClusterIP
    selector:
        app: blue
    ports:
    - port: 80
      targetPort: 80
