praticas/6-k8s/1-Manifests/5-Ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blue
  namespace: application
  annotations:
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/group.name: ingress
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - host: blue.puc.br
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: blue
                port:
                  number: 80
  tls:
  - hosts:
    - blue.puc.br
